--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -1,6 +1,6 @@
 .header {
   width: 100%;
-  height: 4rem;
+  height: 5rem;
   border-bottom: .1rem solid rgba(255, 255, 255, 0.2);
 }
 
@@ -8,14 +8,17 @@
   padding: 0 1rem;
   float: left;
   color: #FFF;
-  font-size: 2em;
+  font-size: 2.5em;
   line-height: 2em;
   text-transform: uppercase;
 }
 
 .header__menu {
-  width: 4rem;
-  height: 4rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 5rem;
+  height: 5rem;
   float: right;
   border-left: .1rem solid rgba(255, 255, 255, 0.2);
   cursor: pointer;
