Creating a toggle menu

--- a/src/components/repository/Repository.css
+++ b/src/components/repository/Repository.css
@@ -11,6 +11,7 @@
   transform: scale(1.015);
   border: 1px solid #3e4d60;
   background-color: #273444;
+  cursor: pointer;
 }
 
 .repository__language-icon {
