--- a/src/components/profile/Profile.css
+++ b/src/components/profile/Profile.css
@@ -14,6 +14,12 @@
   text-transform: uppercase;
 }
 
+.profile__header-error {
+  border: none;
+  background-color: #f43d3d;
+  text-align: center;
+}
+
 .profile__list {
   margin: 0;
   padding: 0;
