--- a/src/components/home/Home.scss
+++ b/src/components/home/Home.scss
@@ -1,32 +1,34 @@
 .profile-search {
   width: 30rem;
   margin: 37vh auto;
-}
 
-.profile-search__input {
-  width: 16.6rem;
-  height: 4rem;
-  margin-right: 10px;
-  padding: 0 1rem;
-  border: 2px solid rgba(255, 255, 255, 0.2);
-  background-color: transparent;
-  color: rgba(255, 255, 255, 0.2);
-  font-size: 1.6rem;
-}
+  &__input {
+    width: 16.6rem;
+    height: 4rem;
+    margin-right: 10px;
+    padding: 0 1rem;
+    border: 2px solid rgba(255, 255, 255, 0.2);
+    background-color: transparent;
+    color: rgba(255, 255, 255, 0.2);
+    font-family: inherit;
+    font-size: 1.6rem;
 
-.profile-search__input-error {
-  border: 2px solid rgba(255, 0, 0, 0.4);
-  outline: none;
-}
+    &-error {
+      border: 2px solid rgba(255, 0, 0, 0.4);
+      outline: none;
+    }
+  }
 
-.profile-search__button {
-  width: 100px;
-  height: 4.4rem;
-  border: 2px solid rgba(255, 255, 255, 0.2);
-  background-color: transparent;
-  color: rgba(255, 255, 255, 0.2);
-  font-size: 1.6rem;
-  font-weight: bold;
-  text-transform: uppercase;
-  cursor: pointer;
+  &__button {
+    width: 100px;
+    height: 4.4rem;
+    border: 2px solid rgba(255, 255, 255, 0.2);
+    background-color: transparent;
+    color: rgba(255, 255, 255, 0.2);
+    font-family: inherit;
+    font-size: 1.6rem;
+    font-weight: bold;
+    text-transform: uppercase;
+    cursor: pointer;
+  }
 }
